[gd_scene load_steps=2 format=3 uid="uid://c8yvxr1y2vqnbx"]

[ext_resource type="Script" uid="uid://da0unaxqy1ecd" path="res://scenes/test/chess_test.gd" id="1_yvnbx"]

[node name="ChessTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yvnbx")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "棋子测试场景"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChessList" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 80.0
offset_right = 320.0
offset_bottom = 580.0

[node name="VBoxContainer" type="VBoxContainer" parent="ChessList"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ChessListTitle" type="Label" parent="ChessList/VBoxContainer"]
layout_mode = 2
text = "棋子列表"
horizontal_alignment = 1

[node name="SynergyList" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 340.0
offset_top = 80.0
offset_right = 640.0
offset_bottom = 580.0

[node name="VBoxContainer" type="VBoxContainer" parent="SynergyList"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SynergyListTitle" type="Label" parent="SynergyList/VBoxContainer"]
layout_mode = 2
text = "羁绊列表"
horizontal_alignment = 1

[node name="TestArea" type="Panel" parent="."]
layout_mode = 0
offset_left = 660.0
offset_top = 80.0
offset_right = 1260.0
offset_bottom = 580.0

[node name="TestAreaTitle" type="Label" parent="TestArea"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 10.0
offset_right = 100.0
offset_bottom = 36.0
grow_horizontal = 2
text = "测试区域"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="TestArea"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -40.0
offset_right = 300.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
text = "状态: 未选择棋子"
horizontal_alignment = 1

[node name="ButtonPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -100.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="ButtonPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="UpgradeButton" type="Button" parent="ButtonPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "升星"

[node name="MergeButton" type="Button" parent="ButtonPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "合并"

[node name="TestSynergyButton" type="Button" parent="ButtonPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "测试羁绊"

[node name="ResetButton" type="Button" parent="ButtonPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "重置"

[node name="BackButton" type="Button" parent="ButtonPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "返回"

[connection signal="pressed" from="ButtonPanel/HBoxContainer/UpgradeButton" to="." method="_on_upgrade_button_pressed"]
[connection signal="pressed" from="ButtonPanel/HBoxContainer/MergeButton" to="." method="_on_merge_button_pressed"]
[connection signal="pressed" from="ButtonPanel/HBoxContainer/TestSynergyButton" to="." method="_on_test_synergy_button_pressed"]
[connection signal="pressed" from="ButtonPanel/HBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="ButtonPanel/HBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
